[package]
categories = ["asynchronous"]
description = "Asynchronous tools that intends for smaller binary size."
edition = "2021"
keywords = ["async", "future"]
license = "MIT"
name = "slim-futures"
repository = "https://github.com/EFanZh/slim-futures"
version = "0.1.0"

[[bench]]
harness = false
name = "async-iter-performance"

[[bench]]
harness = false
name = "future-performance"

[dependencies]
fn-traits = "0.1"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }
tokio = { version = "1", features = ["macros", "rt"] }
