[package]
categories = ["asynchronous"]
description = "Asynchronous tools that intends for smaller binary size."
edition = "2021"
keywords = ["async", "future"]
license = "MIT"
name = "slim-futures"
repository = "https://github.com/EFanZh/slim-futures"
version = "0.1.0-alpha.1"

[workspace]
members = ["crates/option-entry", "crates/three-states"]

[workspace.dependencies]
fn-traits = "0.1"
futures-core = "0.3"
futures-util = "0.3"
option-entry = { path = "crates/option-entry" }
pin-project-lite = "0.2"
scopeguard = "1"
three-states = { path = "crates/three-states" }

[[bench]]
harness = false
name = "async-iterator"

[[bench]]
harness = false
name = "future"

[dependencies]
fn-traits = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
option-entry = { workspace = true }
pin-project-lite = { workspace = true }
three-states = { workspace = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }
tokio = { version = "1", features = ["macros", "rt"] }
