[package]
categories = ["asynchronous"]
description = "Provides a enum type that have three states."
edition = "2021"
keywords = ["async", "future"]
license = "MIT"
name = "option-entry"
readme = "README.md"
repository = "https://github.com/EFanZh/slim-futures"
version = "0.1.0-alpha.0"

[dependencies]
scopeguard = { workspace = true }
