[package]
categories = ["asynchronous"]
description = "Provides a enum type that have three states."
edition = "2021"
keywords = ["async", "future"]
license = "MIT"
name = "three-states"
readme = "README.md"
repository = "https://github.com/EFanZh/slim-futures"
version = "0.1.0-alpha.0"

[dependencies]
pin-project-lite = { workspace = true }
